# test-data-analytics-fullstack

./: .coverage  .env.development  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  DEMO.md  DOCKER_GUIDE.md  Dockerfile.training  GITHUB_ACTIONS.md  LICENSE  Makefile  PUSH_CHECKLIST.md  README.md  demo.sh  docker-compose.prod.yml  docker-compose.yml  docker-demo.sh  k8s-deployment.yaml  requirements.txt  sample_videos.csv  setup_venv.sh  test_local.sh
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml  ci.yml
backend/: Dockerfile  __init__.py  pyproject.toml
backend/app/: __init__.py  analysis_anomaly.py  analysis_clustering.py  analysis_embeddings.py  analysis_predictive.py  analysis_trends.py  etl.py  feature_utils.py  main.py  model_versioning.py  service.py  settings.py
backend/tests/: conftest.py  test_api.py  test_etl.py  test_pipeline.py
docs/: CHALLENGES_AND_ENHANCEMENTS.md  DOCKER_COMPOSE_GUIDE.md  DOCKER_GUIDE.md  ENVIRONMENT_BEST_PRACTICES.md  MONITORING.md  PROJECT_SUMMARY.md  PUSH_CHECKLIST.md  PUSH_TO_GITHUB.md  PYTEST_TESTING.md  README.md  README_OLD.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AnomaliesTable.tsx  (+5 more)
models/: clusters_v1.joblib  clusters_v2.joblib  example_artifact_v30.joblib  manifest.json  mapie_validation.json  predictive_base_v2.joblib  shap_sample.joblib  title_embeddings.joblib  title_tfidf.joblib
notebooks/: 01_exploration_v2.ipynb
scripts/: train_pipeline.py
