[project]
name = "content-insights"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "mapie>=0.8",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "shap>=0.42",
  "matplotlib>=3.8",
  "joblib>=1.3",
  "mlflow>=2.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "httpx>=0.27",
  "ruff>=0.4",
  "mypy>=1.8",
  "black>=24.0",
  "isort>=5.13",
  "flake8>=7.0",
]
mlops = [
  "mlflow>=2.10",
  "psycopg2-binary>=2.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","B","UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
